Update info and license

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <base href="/" />
     <meta charset="utf-8" />
 
-    <title>Vite Plugin GLSL</title>
+    <title>Vite Plugin Lygia</title>
 
-    <meta name="author" content="Ustym Ukhman" />
+    <meta name="author" content="Nikita Dudnik" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
 
     <meta name="keywords" content="vite,plugin,glsl,webgl,webgpu,shader" />
